--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ main a:hover{
     color: white;
 }
 
-@media (max-width: 620px){
+@media (max-width: 520px){
     section{
         width: 90%;
         padding: 30px;
@@ -88,6 +88,6 @@ main a:hover{
 
     main a{
         padding: 10px 0;
-        box-shadow: #ff1515;
+        box-shadow: #fffb15;
     }
 }
